--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -14,6 +14,7 @@
 
 <!-- General -->
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/paper-progress/paper-progress.html">
 
 <!-- Error pages-->
 <link rel="import" href="error/error-page.html">
