--- a/app/elements/submission/challenge-finished.html
+++ b/app/elements/submission/challenge-finished.html
@@ -2,16 +2,14 @@
 	<style>
 		:host{
 			display: block;
-			width: 35%;
 		}
 
 		paper-material{
-			margin: 0;
-			background: white;
+			width: 35%;
 		}
 	</style>
 	<template>
-		<paper-material elevation="1">
+		<paper-material elevation="1" class="card">
 			<div class="flex">
 				<h2>You have completed your task. Good job!</h2>
 				<p>Your results will be computed shortly.</p>
