--- a/app/elements/nav-bar.html
+++ b/app/elements/nav-bar.html
@@ -20,10 +20,10 @@
 				<template is="dom-if" if="{{isCompany}}">
 					<paper-tab link><a href="/candidates" class="center-center horizontal layout">Candidates</a></paper-tab>
 					<paper-tab link><a href="/challenges" class="center-center horizontal layout">Challenges</a></paper-tab>
-					<paper-tab link><a href="/tasks" class="center-center horizontal layout">Tasks</a></paper-tab>
+					<paper-tab link><a href="/tasks" class="center-center horizontal layout fullHeight">Tasks</a></paper-tab>
 				</template>
 				<template is="dom-if" if="{{isCoder}}">
-					<paper-tab link><a href="/challenge" class="center-center horizontal layout">Challenge</a></paper-tab>
+					<paper-tab link><a href="/challenge" class="center-center horizontal layout fullHeight">Challenge</a></paper-tab>
 				</template>
 				<span class="flex-5"></span>
 			</paper-tabs>
