--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -11,12 +11,12 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page('/token/:token', function(context) {
+		app.showProgress();
 		var token = context.params.token;
 		var decodedToken = atob(token).split(':');
 		var accessToken = { Value: decodedToken[1] };
 		localStorage.accessToken = JSON.stringify(accessToken);
 		localStorage.setItem('challenge', decodedToken[0]);
-		app.startChallenge();
 		// TODO(flowlo): Request /user to set localStorage.user, but
 		// this is currently not needed.
 		app.login();
