Add form to create a new task * add bower dependency for markdown support * page to create task * form to create a code task * create component to render markdown text * display instructions as markdown on task detail page

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -93,6 +93,14 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
+	page('/task/create', function(){
+		checkAuthorization();
+		checkIsCompany();
+		app.header = 'Create task';
+		app.route = 'task-create';
+		Polymer.Base.importHref('/elements/task/task-form.html');
+	});
+
 	page('/user/:userKey', function(context){
 		checkAuthorization();
 		checkIsCompany();
