--- a/app/index.html
+++ b/app/index.html
@@ -121,16 +121,20 @@
 					<task-list id="taskList"></task-list>
 				</section>
 
+				<section data-route="task-detail">
+					<task-detail id="taskDetail"></task-detail>
+				</section>
+
+				<section data-route="task-create">
+					<task-form id="taskForm"></task-form>
+				</section>
+
 				<section data-route="user" class="fullHeight">
 					<user-detail id="userDetail"></user-detail>
 				</section>
 
 				<section data-route="userChallenge" class="fullHeight">
 					<user-challenge-detail id="userChallengeDetail"></user-challenge-detail>
-				</section>
-
-				<section data-route="task-detail">
-					<task-detail id="taskDetail"></task-detail>
 				</section>
 
 				<section data-route="unauthorized">
