Fix references to tasks

--- a/app/elements/submission/challenge-display.html
+++ b/app/elements/submission/challenge-display.html
@@ -1,8 +1,8 @@
 <dom-module id="challenge-display">
 	<template>
-		<h1>{{challenge.Name}}</h1>
+		<h1>{{challenge.Assignment.Name}}</h1>
 		<h3>Description</h3>
-		<p>{{challenge.Description}}</p>
+		<p>{{challenge.Assignment.Description}}</p>
 		<h3>Instructions</h3>
 		<p>{{challenge.Instructions}}</p>
 	</template>
