--- a/app/elements/submission/tasks/task-display.html
+++ b/app/elements/submission/tasks/task-display.html
@@ -7,11 +7,11 @@
 	</style>
 	<template>
 		<div>
-			<h1>{{task.Name}}</h1>
+			<h1>{{task.Assignment.Name}}</h1>
 			<h3>Description</h3>
-			<p>{{task.Description}}</p>
+			<p>{{task.Assignment.Description}}</p>
 			<h3>Instructions</h3>
-			<p>{{task.Instructions}}</p>
+			<p>{{task.Assignment.Instructions}}</p>
 		</div>
 	</template>
 	<script>
